Moving to MongoDB in progress...

--- a/src/mm/Views/Home/Index.cshtml
+++ b/src/mm/Views/Home/Index.cshtml
@@ -33,15 +33,15 @@
                         @if (breakfast.Buying != null)
                         {
                             <div class="dropdown">
-                                <button class="btn btn-sm btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
-                                    @breakfast.Buying.UserId
+                                <button class="btn btn-sm btn-primary dropdown-toggle @disabled" type="button" data-toggle="dropdown">
+                                    @breakfast.Buying.Name
                                     <span class="caret"></span>
                                 </button>
                                 <ul class="dropdown-menu">
-                                    <li><a href="@breakfast.GenChangeLink(breakfast.Buying, Participation.Buying)">@breakfast.Buying.UserId is OOO</a></li>
+                                    <li><a href="@breakfast.GenChangeLink(breakfast.Buying, Participation.Buying)">@breakfast.Buying.Name is OOO</a></li>
                                     @foreach (var p in breakfast.Participating)
                                     {
-                                        <li><a href="@breakfast.GenChangeLink(p, Participation.Override)">@p.UserId</a></li>
+                                        <li><a href="@breakfast.GenChangeLink(p, Participation.Override)">@p.Name</a></li>
                                     }
                                 </ul>
                             </div>
@@ -50,13 +50,13 @@
                     <td>
                         @foreach (var p in breakfast.Participating)
                         {
-                            <a href="@breakfast.GenChangeLink(p, Participation.Participating)" class="btn btn-sm btn-success @disabled" role="button">@p.UserId</a>
+                            <a href="@breakfast.GenChangeLink(p, Participation.Participating)" class="btn btn-sm btn-success @disabled" role="button">@p.Name</a>
                         }
                     </td>
                     <td>
                         @foreach (var p in breakfast.NotParticipating)
                         {
-                            <a href="@breakfast.GenChangeLink(p, Participation.NotParticipating)" class="btn btn-sm btn-danger @disabled" role="button">@p.UserId</a>
+                            <a href="@breakfast.GenChangeLink(p, Participation.NotParticipating)" class="btn btn-sm btn-danger @disabled" role="button">@p.Name</a>
                         }
                     </td>
                 </tr>
