--- a/src/mm/Views/Home/NewUser.cshtml
+++ b/src/mm/Views/Home/NewUser.cshtml
@@ -1,34 +1,44 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿
+@using mm.Models
+@model EditTeamPerson
+
 <div>
     <h1>First Time Here</h1>
     <p>Please select your team and fill in the blanks, click Ok and you'll be part of something great!</p>
 
-    <form class="form-horizontal">
+    @using (@Html.BeginForm("NewUser", "Home", FormMethod.Post))
+    {
+
 
         <div class="form-group">
-            <label class="col-sm-2 control-label">B Number</label>
-            <div class="col-sm-10">
-                <p class="form-control-static">@User.Identity.Name</p>
+            <label for="TeamId">Team</label>
+            <div>
+                <select class="form-control" id="TeamId" name="TeamId">
+                    @foreach (var t in Model.Teams)
+                {
+                        <option value="@t.Id">@t.Name</option>
+                    }
+                </select>
             </div>
         </div>
 
         <div class="form-group">
-            <label for="inputEmail" class="col-sm-2 control-label">Email</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="inputEmail" placeholder="bob@danskebank.dk">
+            <label for="Email">Email</label>
+            <div>
+                <input type="text" class="form-control" id="Email" name="Email" placeholder="bob@danskebank.dk">
             </div>
         </div>
 
-       
         <div class="form-group">
-            <div class="col-sm-offset-2 col-sm-10">
+            <div>
                 <button type="submit" class="btn btn-default">Join your teams Breakfast Club</button>
             </div>
         </div>
-    </form>
+    }
+
+    @*<form class="form-horizontal" action="/Home/NewUser" method="post">
+
+
+        </form>*@
 
 </div>
