More error handling in NewUser, smater forms and errorhandling

--- a/src/mm/wwwroot/css/site.css
+++ b/src/mm/wwwroot/css/site.css
@@ -36,3 +36,31 @@ textarea {
     display: none
   }
 }
+
+
+/* added */
+/* styles for validation helpers */
+.field-validation-error {
+    color: #b94a48;
+}
+
+.field-validation-valid {
+    display: none;
+}
+
+.input-validation-error {
+    border: 5px solid #b94a48;
+}
+
+
+input[type="checkbox"].input-validation-error {
+    border: 0 none;
+}
+
+.validation-summary-errors {
+    color: #b94a48;
+}
+
+.validation-summary-valid {
+    display: none;
+}
