--- a/src/mm/Views/Home/NewUser.cshtml
+++ b/src/mm/Views/Home/NewUser.cshtml
@@ -2,11 +2,17 @@
 @using mm.Models
 @model EditTeamPerson
 
+<style>
+    .input-validation-error {
+        border: 1px solid #b94a48;
+    }
+</style>
 <div>
     <h1>First Time Here</h1>
     <p>Please select your team and fill in the blanks, click Ok and you'll be part of something great!</p>
 
-    @using (@Html.BeginForm("NewUser", "Home", FormMethod.Post))
+
+    @using (@Html.BeginForm("NewUser", "Home", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
     {
 
         @if (!string.IsNullOrWhiteSpace(Model.Message))
@@ -17,26 +23,22 @@
         }
 
         <div class="form-group">
-            <label for="TeamId">Team</label>
-            <div>
-                <select class="form-control" id="TeamId" name="TeamId">
-                    @foreach (var t in Model.Teams)
-                {
-                        <option value="@t.Id">@t.Name</option>
-                    }
-                </select>
+            @Html.LabelFor(m => m.Teams, new { @class = "col-sm-2 control-label" })
+            <div class="col-sm-10">
+                @Html.DropDownListFor(x => x.TeamId, Model.Teams, null, new { @class = "form-control" })
             </div>
         </div>
 
         <div class="form-group">
-            <label for="Email">Email</label>
-            <div>
-                <input type="text" class="form-control" id="Email" name="Email" placeholder="bob@danskebank.dk">
+            @Html.LabelFor(m => m.Email, new { @class = "col-sm-2 control-label" })
+            <div class="col-sm-10">
+                @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.Email)
             </div>
         </div>
 
         <div class="form-group">
-            <div>
+            <div class="col-sm-offset-2 col-sm-10">
                 <button type="submit" class="btn btn-default">Join your teams Breakfast Club</button>
             </div>
         </div>
