--- a/src/mm/Views/Home/Index.cshtml
+++ b/src/mm/Views/Home/Index.cshtml
@@ -13,6 +13,12 @@
     }
 </style>
 <div>
+    @if (!string.IsNullOrWhiteSpace(Model.ErrorMessage))
+    {
+        <div class="alert alert-danger">
+            <strong>Error</strong> @Model.ErrorMessage
+        </div>
+    }
     <table class="table">
         <thead>
             <tr>
