Removed home rout

--- a/src/mm/Views/Shared/_Layout.cshtml
+++ b/src/mm/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
         <div class="container">
             <p class="nav navbar-text">Hello, @User.Identity.Name!</p>
             <div class="navbar-header navbar-right">
-                <img src="images/danske-bank-logo.svg" title="Danske Bank" alt="Danske Bank" style="margin-top:13px;"/>
+                <img src="~/images/danske-bank-logo.svg" title="Danske Bank" alt="Danske Bank" style="margin-top:13px;"/>
             </div>
             @*<div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
