Gotta learn git...:-(

--- a/src/mm/Views/Shared/_Layout.cshtml
+++ b/src/mm/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
-            <p class="nav navbar-text">Hello, @User.Identity.Name!</p>
+            <p class="nav navbar-text">@ViewData["HiText"]</p>
             <div class="navbar-header navbar-right">
                 <img src="~/images/danske-bank-logo.svg" title="Danske Bank" alt="Danske Bank" style="margin-top:13px;"/>
             </div>
